force-app/main/default/objects/MarketingActions__c/MarketingActions__c.object-meta.xml
<CustomObject>
    <description>Keeps data used by Marketing to send emails, SMS, etc.</description>
    <label>Marketing Action</label>
    <nameField>
        <displayFormat>MA-{00000000}</displayFormat>
        <label>Marketing Action Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>