force-app/main/default/objects/MarketingActions__c/fields/ActionId__c.field-meta.xml
<CustomField>
    <fullName>ActionId__c</fullName>
    <description>Identifies the type of action</description>
    <label>Action ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>