force-app/main/default/objects/MarketingActions__c/fields/DateRequested__c.field-meta.xml
<CustomField>
    <fullName>DateRequested__c</fullName>
    <description>Stores the date requested</description>
    <label>Date Requested</label>
    <length>10</length>
    <type>Text</type>
</CustomField>