force-app/main/default/objects/MarketingActions__c/fields/RelatedId__c.field-meta.xml
<CustomField>
    <fullName>RelatedId__c</fullName>
    <description>Stores the Id of the related object</description>
    <label>Related Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>