force-app/main/default/objects/MarketingActions__c/fields/SendTo__c.field-meta.xml
<CustomField>
    <fullName>SendTo__c</fullName>
    <description>Stores the information about where is gonna be sent (SMS, Email, etc.)</description>
    <label>Send To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>