force-app/main/default/objects/MarketingActions__c/fields/TimeRequested__c.field-meta.xml
<CustomField>
    <fullName>TimeRequested__c</fullName>
    <description>Stores the time requested</description>
    <label>Time Requested</label>
    <length>8</length>
    <type>Text</type>
</CustomField>