force-app/main/default/objects/MarketingActions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ActionId__c</columns>
    <columns>RelatedId__c</columns>
    <columns>SendTo__c</columns>
    <columns>DateRequested__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>